<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>java</groupId>
  <artifactId>java-study</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>java-study</name>
  <url>http://maven.apache.org</url>

  <properties>
    <encoding>UTF-8</encoding>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.encoding>UTF-8</maven.compiler.encoding>

    <java.version>17</java.version>
    <source.version>17</source.version>
    <target.version>17</target.version>

  </properties>

  <modules>
    <module>java-thread-nio</module>
    <module>java8</module>
    <module>java-courses</module>
    <module>redis-study</module>
  </modules>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>${source.version}</source>
          <target>${target.version}</target>
          <encoding>${encoding}</encoding>
          <fork>true</fork>
          <compilerArgs>
            <arg>--add-exports</arg>
            <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>

    </plugins>

  </build>

</project>